fix Nebula button alignment on Safari/iOS

--- a/src/components/NebulaVideoRow.module.css
+++ b/src/components/NebulaVideoRow.module.css
@@ -10,6 +10,7 @@
 
 .svg {
   height: 37px;
+  width: auto;
 }
 
 @media (--small) {
